# DESAFIO1-TETRIS-

./: Informe I Informática II_ Desafío 1.docx  README.md
PRUEBASTETRIS/: CMakeLists.txt  FuncionesTetris.h  main.cpp
