cmake_minimum_required(VERSION 3.16)

project(PRUEBASTETRIS LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(PRUEBASTETRIS main.cpp
    FuncionesTetris.h)

include(GNUInstallDirs)
install(TARGETS PRUEBASTETRIS
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
